# LangGraphWithPydantic

./: .gitignore  Dockerfile  LICENSE  README.md  agent.py  const.py  docker-compose.yml  internal_prompt.py  llm.py  logger_config.py  main.py  mcp_adapter.py  mcp_artifacts.py  mcp_exec_safe.py  mcp_net.py  mcp_ro.py  mcp_shell.py  requirements.txt  run_chainlit.sh  run_streamlit.sh  run_test.sh  skills_registry.py  tools.py  trace_visualizer.py  ui_streamlit.py  utils.py  visualize_graph.py  web_tools.py
config_example/: config.json  config.yaml  config.yml
const/: __init__.py  const.py
docker/searxng/searxng/: settings.yml
scripts/: run.sh
skills/code_review/: SKILL.md
skills/source-code-analysis/: SKILL.md
skills/source_code_analysis/: SKILL.md
skills/web-search/: SKILL.md  SKILL.zh.md
skills/web_search/: SKILL.md
src/clawflow/: main.py
src/clawflow/agents/: __init__.py  agent.py  internal_prompt.py  llm.py  test_agent.py  tool_cheatsheet.py
src/clawflow/config/: __init__.py  loader.py
src/clawflow/skills/: skills_registry.py
src/clawflow/utils/: __init__.py  logger_config.py  test_utils.py  utils.py
tests/: test_agent.py  test_tools.py  test_utils.py
tools/: gen_deps_with_ranges.py  pyproject.toml
tools/src/my_tools/: __init__.py  mcp_adapter.py  mcp_artifacts.py  mcp_exec_safe.py  mcp_net.py  mcp_ro.py  mcp_shell.py  tools.py  web_tools.py
tools/src/my_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ui_streamlit/: run_streamlit.sh  trace_visualizer.py  ui_streamlit.py  visualize_graph.py
(+5 files in other folders)
