[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_tools"
version = "0.1.0"
description = "Standalone library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain_core>=1.2.8,<2",
  "mcp>=1.26.0,<2",
  "numpy>=2.4.1,<3",
  "pandas>=2.3.3,<3",
  "plotly>=6.5.2,<7",
  "pydantic>=2.12.5,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9",
]

[tool.setuptools.packages.find]
where = ["src"]
